part2/exercise10/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: todo-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: todo-app
            port:
              number: 2344
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend
            port:
              number: 2345
